src/components/ThemeSelect/ThemeSelect.module.css
.menuTheme {
  position: relative;
  margin: 0;
  max-height: 200px;
  color: var(--mainTextColor);
  background-color: var(--secondaryBgColor);
  display: flex;
  align-items: center;
  gap: 4px;
  cursor: pointer;
  padding: 15px;
}

.menuTheme:hover {
  background-color: var(--lightBgColor);
  border-radius: 8px;
}

.menuTheme:hover .iconChevronDown{
  background-color: var(--lightBgColor);
}

.titleMenuTheme {
  font-weight: 500;
  font-size: 14px;
  line-height: 0.67;
  letter-spacing: -2%;
  opacity: 0.8;
}

.buttonMenu {
  height: 16px;
  width: 16px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--secondaryBgColor);
  cursor: pointer;
}

.iconChevronDown {
  stroke: var(--mainTextColor);
  cursor: pointer;
}


.menuList{
  position: absolute;
  display: flex;
  gap: 5px;
  flex-direction: column;
  width: 100px;
  height: 100px;
  background-color: var(--modalBgColor);
  border-radius: 8px;
  border: 1px solid var(--lightBgColor);
  top: 140%;
  left: 0;

  transition: 200ms linear;
  padding: 15px;
  cursor: default;
}

.menuItem{
  font-size: 14px;
  font-weight: 400;
  line-height: 21px;
  letter-spacing: -0.02em;
  text-align: left;

  color: var(--secondaryTextColor);
  cursor: pointer;

}

.menuItem:hover {
  color: var(--accentColor);
}

.menuListHidden{
  padding: 0 15px;
  opacity: 0;
  top: 70%;
  height: 0;
  border: none;
  overflow: hidden;
}

